Fix white space in menu on short screens

--- a/src/components/Menu/Menu.css
+++ b/src/components/Menu/Menu.css
@@ -43,6 +43,7 @@
 
 @media screen and (max-width: 625px) {
   .menu {
-    width: 100%
+    width: 100%;
+    box-shadow: none;
   }
 }
